--- a/config/cni.conf
+++ b/config/cni.conf
@@ -19,6 +19,9 @@
       }
     },
     {
+        "type": "wireguard-cni"
+    },
+    {
         "type": "portmap",
         "capabilities": {"portMappings": true}
     }
