--- a/pkg/wireguard/hack/EmptyPeers.conf
+++ b/pkg/wireguard/hack/EmptyPeers.conf
@@ -1,4 +1,4 @@
 [Interface]
-Address = 
-PrivateKey = 
-ListenPort = 0
+Address = 192.168.1.1
+PrivateKey = AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
+ListenPort = 51820
