We need to set the interface address to the alloc and tell upstreams what our dial address/port is

--- a/config/cni.conf
+++ b/config/cni.conf
@@ -19,7 +19,8 @@
       }
     },
     {
-        "type": "wireguard-cni"
+        "type": "wireguard-cni",
+	"nodeManagerAddr": "127.0.0.1:5000"
     },
     {
         "type": "portmap",
