deps: setup buf via go install
Also make sure .bin always exists before writing into it

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@ wireguard-cni
 cmd/demo/pkey
 cmd/demo/demo
 
-# local binary dependencies
-.bin/*
+# Local binary dependencies
+.bin/**
 
+# Vendor
 vendor
