--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,6 +16,9 @@ jobs:
       with:
         go-version: 1.21
 
+    - name: Install deps
+      run: make lint-install
+
     - name: Test
       run: make test
 
