--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,7 +17,7 @@ jobs:
         go-version: 1.21
 
     - name: Install deps
-      run: make lint-install
+      run: make lint/install
 
     - name: Test
       run: make test
